# TimetableBot

TimetableBot/: debug_schedule.html  pyproject.toml  replit.md  run.py
TimetableBot/TimetableBot/: replit.md  run.py
TimetableBot/TimetableBot/src/: config.py  main.py  schedule_parser.py  user_data.py
TimetableBot/src/: config.py  main.py  schedule_parser.py  user_data.py
TimetableBot/user_data/: users.json
TimetableBot/user_data/cookies/: user_1404095664.txt
