[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.22.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
